--- a/chapter2.tex
+++ b/chapter2.tex
@@ -1,5 +1,104 @@
 \chapter{Fine-tuning with intermediate Mathematical Constants}
 
+\section {The Arithmetical Monster Prime 137}
+
+The pertinence of our above simple polynomial relations are not admitted by the standard
+community, for instance arguing that since the proton is composite, its mass cannot enter simple
+relations. The same argument is presented for the theoretical dependence of the electric constant a
+with other constants g and g', or with the energy level. These are reductionist arguments, unable toexplain the fine-tuning phenomena, and leading to the sterile concept of unexplained emergences.
+By contrast, the holistic approach implies immergences from a comprehension of the Cosmos. It is a
+pity that this term 'immergence' is a neologism.
+The Eddington's proposal for a was the whole number 137, which intrigued some physicists for a
+century, but apparently nobody signaled it has a fundamental mathematical property: it appears as a
+Singular Prime in the series of the maximal primes appearing in the numerator of the harmonic
+series: 3,11,5,137,7,11, showing a symmetry between the 11 supergravity dimensions and the 4 of
+space-time. Indeed:
+137 = 112 + 42
+11/4 = ( λ CNB /λ CMB ) 3
+Since Riemann series are tied to the prime number distribution, it is strange that mathematicians
+have not point out the primes appearing in the Harmonic series, since it is the single pole. It seems
+that the basic precept 'all occurs in the pole' was forgotten in this case. As ancient Egyptian used
+only fractions of type 1/n, they were certainly aware of this particular harmonic series s 5 = 137/60.
+Indeed in appears in the Ptolemaic approximation for π: 377/120 = 2 + s 5 /2.
+Recall that the electrical constant a characterizes the force ħc/al2 between two l - distant
+elementary charges, appearing central in Atomic Physics and in many fine-tuning relations [1]. It is
+misleading that physicists focused on only one property, the appearance of its fifth power in the
+Hydrogen hyper-fine spectra, and call its inverse the 'fine-structure constant'. It is strange also that
+Eddington's Theory was rejected as soon as a appeared to be different from 137. Indeed, the
+following shows that 137 plays a central role in fine-tuning analysis. One may interpret 137 + 1 as
+the sum of the numbers of dimensions in the Topological Axis [3], taking into account the double
+point for the superstring value n = 10, and the remarkable sum:
+∑
+k = 7
+k = 0
+(2 + 4 k ) = 2 7
+So 137 = 2 7 – 1 + 3 + 7, the Hierarchic Combination form. But this appears also as 137 = 135 + 2,
+with the dimension 2 of the String patent. In particular, one obtains the value a ≈ 137.035999119
+compatible with measurement a ≈ 137.035999139(31) in:
+ln137/ln(a/137) ≈ (2+135/d e ) 2
+meaning the ratio a/137 acts as a canonical ratio.
+
+\section {The Arithmetical Logic : Holic Principle and Topological Axis}
+
+In the hypothesis of an Arithmetic Cosmos, the ultimate equations must be diophantine. The
+simplest one is T 2 = L 3 , where T is a time ratio and L a length one, resolving, since 2 and 3 are co-
+prime, by T 2 = L 3 = n 6 , meaning the classical 6D space of classical mechanics. This particularizes
+the usual 3D space, but attribute 2 dimensions for the Time, in conformity with an independent
+study [18].
+This is the degenerate arithmetic form of the spatio-temporal holographic principle, It is also the
+rd
+3 Kepler law, but its diophantine form gives L = n 2 , the orbit law in the Hydrogen atom and in our
+Gravitational Molecule model, where the visible Universe corresponds to the first orbital,
+suggesting the existence of a Grandcosmos, as the Topological Axis does also, which favors the
+dimension n = 30, the natural extension of the above :
+T 2 = L 3 = M 5 = n 30where M is a mass ratio. Recall that the lifetime of an unstable particle depend on the fifth power of
+its mass. This is called the Holic Principle, concerning only the apparent world. The complete Holic
+Principle, concerning also the quantum vacuum, would involve a term F 7 , and a dimension 210.
+
+\section {The Information Conservation}
+
+The Grandcosmos holographic reduction radius R' shows itself an overwhelming holographic
+relation with the CMB Wien wavelength l CMB , to 0.01 %:
+4π(R'/l CMB ) 2 ≈ e a
+Since the holographic technique uses coherent radiation, this seems incompatible with the CMB
+thermal character. But in a totally deterministic cosmos, there is no paradox. This question is
+connected with the black hole information paradox [20]. Independently of our approach, an
+argument in favor of a total conservation of information was tied to a non-evolution cosmology
+[21], Moreover, we have shown that formalisms of Holography and Unitary Matrix Quantum
+Physics are very similar [3]. Note that e a is also compatible with the half volume of the proton, with
+the Planck length as unity.
+So, while General Relativity and Unitary Quantum physics disagree about the nature of Space-
+Time, specially the non-locality phenomena, they agree for complete determinism, ruining the
+Copenhagen statistical interpretation. The hidden variables exist really: the Cosmos ! Heisenberg
+relations would be only Fourier transform manifestations of Wave Mechanics.
+
+\section {Omnipresence of a^a}
+
+The famous Lucas-Lehmer primality test uses the series of whole numbers N n+1 = N n 2 – 2,
+starting from N = 4 = u 3 + 1/u 3 , with u 3 = √3 + 2, belonging to the Diophantine generators u n = √n +
+√(n+1)., whose entire powers are close to whole numbers. One shows that N n ≈ u 3 ^(2^q), and for q
+= 9:
+u 3 ^(2^9) ≈ (2(a2 + 2√μ)) 64 ≈ a a
+defining a to 39 ppm, where μ is the mass ratio muon/electron and the main term 2a2 = m e c2/E Ryd is
+tied to the Rydbergh energy's principal value E Ryd whose ratio with the Planck energy is closely
+related to the Monster group cardinal order, to 1.5 ppm:
+O M e -1/2a ≈ (E P /E Ryd )2 = ħGc 5 /E Ryd 2
+Indeed, by respect to the Chronon ƛ M /c ≈ t 0 = 1.1333 × 10 -104 s, the number ot quantum events in
+the above Supercycle period T/ t 0 shows, with δ = R'/R, to 0.4%, 2 % and 0.6 %:
+δ × T/t 0 ≈ (e e ) 137 ≈ O M 3 ≈ 496 60
+implying a liaison between O M , 137 and the famous String dimension 496, tied to the Higgs Boson
+(see Fig.1). Note the following combination of the three dimensionless parameters, the electrical
+one a, the Fermi ratio F =√a w and the Bizouard strong ratio f ≈ 8.4345:
+F/af ≈ 496
+Also, to 8 ppm: lnO M /2lnlnlnlnO M ≈ 137, and the product of the 20 groups of the happy family tied
+to the Monster shows, to 0.015 %:
+Π happy ≈ δ × a aAlso, with the Pell-Fermat generator u 1 = 1 + √2:
+a a ≈ u 1 ^(3×(2 8 - 1))
+defining a to 0.3 ppm. So the number a a establishes a connexion between u 1 and u 3 , two of the
+simplest arithmetics generators. Moreover a a has been connected [3] to the canonical e 1/e and the
+fifth optimal musical scale with 306 notes. This opens a new research in pure mathematics.
+
+
 \begin{itemize}
 \item The Arithmetical Monster Prime 137
 \item The Arithmetical Logic : Holic Principle and Topological Axis
