--- a/chapter3.tex
+++ b/chapter3.tex
@@ -1,11 +1,11 @@
-Fine-tuning with basic mathematical constants
+\chapter{Fine-tuning with basic mathematical constants}
 
 Since some dimensionless physical parameters are very precisely measured, it is natural to look for
 relations with mathematical constants different from the optimal basis e, such as π and γ ≈
 0.577215665, the Euler-Mascheroni constant, which appears already in the above single-electron
 cosmic radius and the Topological Axis.
 
-The Wyler's approach
+\section {The Wyler's approach}
 
 Armand Wyler singularized a value a W approaching a to 0.6 ppm and confirmed the pertinence
 of the Lenz approximation which plays a central role above: p 0 = 6π 5 approaching p to 18.824 ppm.
@@ -15,7 +15,7 @@ a/137 ≈ (6π 5 H) 1/2 /p
 Note that the rejection of Wyler's work, due to a non-perfect formula for the p and a values, is a new
 manifestation of the general neglectance of the Hierarchy Principle.
 
-The Archimedes constant π as a calculation basis
+\section {The Archimedes constant π as a calculation basis}
 
 The above Lenz-Wyler formula has a geometrical interpretation: 6π 5 is the product area-
 volume of a square of radius π. Now, the value f{26} of the Topological Function for the String
@@ -36,7 +36,7 @@ scale e, encountered all along above, and confirmed below.
 Note that entire powers of π appears in the 2 ppm Reilly formula:a ≈ 4π 3 + π 2 +π
 Recall that whole powers of π appears also in the even order Riemann series.
 
-The Euler constant e confirmed as the optimal calculation basis for the Grandcosmos
+\section {The Euler constant e confirmed as the optimal calculation basis for the Grandcosmos}
 
 The Topological Axis shows clearly that the Grandcosmos is defined by the following
 conjonction:
@@ -48,7 +48,7 @@ e 2
 a series converging very much rapidly than the Euler's one (1+1/n) n → e. The first two terms defines
 the occidental 12 tones scale.
 
-The electroweak constant mathematical fine tuning
+\section {The electroweak constant mathematical fine tuning}
 
 The Particle standard model achieved a unification between electromagnetism and weak
 nuclear force. So we look for a relation involving a, 137, a w and the mathematical constants. One
@@ -59,7 +59,7 @@ a cube a w ≈ (ƛ e /l eF ) 3 , so:
 ƛ e /l eF ≈ 2γ137a/π
 see below how this formulae simplifies again by using the Atiyah Constant.
 
-The Muon and Tau fine tuning
+\section {The Muon and Tau fine tuning}
 
 Admitting the above relation, this defines F = a w1/2 = E F /m e c 2 ≈ 573007.3652, inside its 2.5 10 -7
 indetermination. Another fine-tuning ties the muon, proton and Hydrogen masses: E F /m e c 2 ≈
@@ -75,7 +75,7 @@ term 1+1/√a, central in quantum electrodynamics (to 10 -7 ):
 1+1/√a ≈ τ 3 H/pD 2
 confirming the central role of the Moonshine Monster dimension [23] D = 196883.
 
-The Intermediate Bosons mathematical fine tuning
+\section {The Intermediate Bosons mathematical fine tuning}
 
 The computer indicates, with n ≈ 1838.68366089(17) the neutron/electron mass ratio:
 W ≈ γa137 2 /3πd e
@@ -83,7 +83,7 @@ Z ≈ ap 2 π 4 /137d e n
 With these values, the above relation R/√(ƛ p ƛ H ) ≈ (WZ) 4 corresponds to the above G value in the
 ppb range.
 
-The Direct Gravitational Constant mathematical fine-tuning
+\section {The Direct Gravitational Constant mathematical fine-tuning}
 
 Computer analysis shows the following ppb precise extension for the deviation between 2 127 and
 a G ,
@@ -96,7 +96,7 @@ the fractional development of π which is itself very close to n/2π to 3.4 10 -
 development of π is always a non-resolved problem, this confirms that present mathematics is
 incomplete and that Nature uses rational approximations for π.
 
-The Atiyah constant
+\section {The Atiyah constant}
 
 Michael Atiyah was a precursor in the search for unity of Mathematics and Physics. His last
 work in this domain introduced the constant Γ = γa/π, as a simplification term [24]. Indeed this
