--- a/chapter5.tex
+++ b/chapter5.tex
@@ -1,7 +1,5 @@
 
-
-
-Conclusions: Simplicity at work
+\chapter{Conclusions: Simplicity at work}
 
 The application of the old direct scientific method, looking for fine tuning between physical
 parameters leads to a return to the Perfect Cosmological Principle implying a Steady-state Cosmos,
