--- a/chapter5.tex
+++ b/chapter5.tex
@@ -13,7 +13,7 @@ dilemma factor 10 122 .
 The multiple connexions with the DNA chain seems to imply it is a 1D hologram. This seems to
 be confirmed by recent studies [30].
 The simplest method of looking for simple monomial expressions involving mathematical
-constants leads to ppb correlations, confirming Cosmos Unicity. As Atiyah writed [24]: 'Nobody has
+constants leads to ppb correlations, confirming Cosmos Unicity. As Atiyah wrote [24]: 'Nobody has
 ever wondered what the Universe would be if π were not equal to 3.14159.... Similarly no one
 should be worried what the Universe would be if a were not 137.035999.... ' This is a definite
 refutation of the Multiverse Hypothesis.
