--- a/chapter5.tex
+++ b/chapter5.tex
@@ -8,8 +8,8 @@ apply in Cosmology: the Absolute Space-time is reestablished, realized by the Mi
 Background, which identifies with the Grandcosmos Absolute Frame.
 The standard Holographic Principle must be generalized to unities others than the Planck length,
 even invoking the visible Universe wavelength in 1D holography, which breaks another taboo of
-current thinking: the Planck wall, by an enormous factor, about 10 61 resolving the vacuum energy
-dilemma factor 10 122 .
+current thinking: the Planck wall, by an enormous factor, about $10^{61}$ resolving the vacuum energy
+dilemma factor $10^{122}$ .
 The multiple connexions with the DNA chain seems to imply it is a 1D hologram. This seems to
 be confirmed by recent studies [30].
 The simplest method of looking for simple monomial expressions involving mathematical
