--- a/chapter1.tex
+++ b/chapter1.tex
@@ -15,10 +15,10 @@ Large Number Problem`. If it is a `problem` for standard evolutionary cosmology,
 clue in steady-state cosmology based on the Perfect Cosmological Principle (spatial and temporal
 homogeneity) [3].
 This Cosmic Fine-Tuning leads directly to a Gravitational Hydrogen model of the universe [3]
-defining the Universe horizon radius $R = 2a G \lambdabar e$ , the factor 2 coming from the two atoms in
+defining the Universe horizon radius $R = 2a G \lambdabar \cdot e$ , the factor 2 coming from the two atoms in
 Hydrogen molecule, where $\lambdabar e = \hbar/cm e$ is the Electron Compton reduced wavelength, and the
 gravitational coupling constant $a G = \hbar c/Gm H m p$ , so the speed c is eliminated. This conforms with
-Coherent Cosmology which needs signal celerity far exceeding c. This gives R ≈ 13,812 Gly, corresponding to a Hubble constant 70.790 (km/s)/Megaparsec, compatible with the
+Coherent Cosmology which needs signal celerity far exceeding c. This gives R = 13,812 Gly, corresponding to a Hubble constant 70.790 (km/s)/Megaparsec, compatible with the
 most recent measurement [4]: 72(3) (km/s)/Megaparsec, which confirms the value measured
 directly by the 1a type novae, while the standard optimization of 6 parameters results in a lower
 value of 9 %.
@@ -212,11 +212,11 @@ following considerations and observations confirm this hypothesis.
 \section {Single Electron Cosmology}
 
 The single-electron cosmology [3] uses the electron indeterminacy, which is the real basis of the
-Exclusion Principle, giving an horizon value R 1 only dependent of the Hydrogen radius a' = aH/p. It
+Exclusion Principle, giving an horizon value R 1 only dependent of the Hydrogen radius $a' = aH/p$. It
 is the value for which the mean cosmic value is also the atomic one:
-Σ(1/n)/Σ(1/n 2 ) = a'
-with the sum running from 2 to R 1 /\lambdabar e . This implies:
-R 1 = \lambdabar e exp((\pi 2 /6 – 1)a' + 1 – γ) ≈ 15.77465 Gly
+$$Σ(1/n)/Σ(1/n 2 ) = a'$$
+with the sum running from 2 to R 1 /\lambdabar \cdot e . This implies:
+R 1 = \lambdabar \cdot e exp((\pi 2 /6 – 1)a' + 1 - \gamma) ≈ 15.77465 Gly
 very close (0.4 ppm) to the following expression, where $p G = P/2 127/2$ , and $β = (Η− p) −1$ is the
 Rydbergh correction factor and $p 0 = 6\pi 5$ the Canonic Lenz-Wiler Approximation of p:
 $R 1 = ( p 0 /p G ) √(βRR')$
@@ -238,7 +238,7 @@ graviton mass being $$m gr = m ph /a w ≈ 3.722 \cdot 10^{-67} kg$$. The corres
 The Kotov non-Doppler cosmic oscillation [9] is not considered seriously, since it seems to
 violate the most basic prerequisite of physics, the generality of Doppler phenomena. Interpreting
 this as a tachyonic phenomena, we identified the Kotov period t K ≈ 9600.06(2) s, taking the electron
-characteristic time t e = \lambdabar e /c as unit, to the simplest relation eliminating c between a G and a w =
+characteristic time t e = \lambdabar \cdot e /c as unit, to the simplest relation eliminating c between a G and a w =
 \hbar 3 /G F m e2 c, the well measured (10^{-7} ) dimensionless electroweak coupling constant a w :
 t K / t e = √(a G a w )
 The weak coupling constant [1] $a w = (E F /m e c 2 ) 2$ is defined from the Fermi energy E F ≈
