--- a/chapter3.tex
+++ b/chapter3.tex
@@ -1,3 +1,10 @@
+%%%%%%%%%%% Nomenclature for this chapter%%%%%%%%%%
+\nomenclature{UOP}{University of Paris 11}
+\chapter{Fine-tuning with basic mathematical constants}
+\label{chap:chapter_3}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \chapter{Fine-tuning with basic mathematical constants}
 
 Since some dimensionless physical parameters are very precisely measured, it is natural to look for
@@ -19,15 +26,15 @@ manifestation of the general neglectance of the Hierarchy Principle.
 
 The above Lenz-Wyler formula has a geometrical interpretation: 6π 5 is the product area-
 volume of a square of radius π. Now, the value f{26} of the Topological Function for the String
-main dimension 26 shows, to 0.1 %, the same form f{26} ≈ 6(2π 2 a 3 ) 5 , where 2π 2 a 3 is the area of a
-4-sphere of radius a. Moreover, with n/p the mass ratio Neutron/Proton, to 0/3%, 0.02 % and 1
+main dimension 26 shows, to 0.1{percent}, the same form f{26} ≈ 6(2π 2 a 3 ) 5 , where 2π 2 a 3 is the area of a
+4-sphere of radius a. Moreover, with n/p the mass ratio Neutron/Proton, to 0/3{percent}, 0.02{percent} and 1
 ppm:
-(p/n) (R/ƛ e ) 2 ≈ (f{26}/6) 2 ≈ (2π 2 a 3 ) 10 ≈ π 155
+$$(p/n) (R/\lambdabar_e )^2 ≈ (f{26}/6) 2 ≈ (2π 2 a 3 ) 10 ≈ π^{155}$$
 The corresponding value of π in the last expression shows the fractional series 3, 7, 16, -u, with u ≈
 2×137. This confirms the above hypothesis concerning the origin of the Cosmos vastness, namely
 that π is a intermediate rational calculation basis: in this case, the rational value π 0 = (355u-22)/
 (113u+7) corresponds to the above G value to 10 -8 precision.
-Since (R/ƛ e ) 2 is also close to 2 256 , within 1%, this illustrates the following musical relation
+Since (R/\lambdabar_e ) 2 is also close to $2^{256}$ , within 1{percent}, this illustrates the following musical relation
 involving again 137:
 2 1/155 ≈ π 1/256 ≈ (2π) 1/3×137
 The scale with 155 notes is not known, but 137 appears also in the classical musical scales [3], in
@@ -53,10 +60,10 @@ the occidental 12 tones scale.
 The Particle standard model achieved a unification between electromagnetism and weak
 nuclear force. So we look for a relation involving a, 137, a w and the mathematical constants. One
 immediately gets:
-a w ≈ (2γ137a/π) 3
-Now, by introducing the characteristic length l eF = (G F /m e c 2 ) 1/3 , this electroweak constant appears as
-a cube a w ≈ (ƛ e /l eF ) 3 , so:
-ƛ e /l eF ≈ 2γ137a/π
+$$a_w ≈ (2γ137a/π)^3$$
+Now, by introducing the characteristic length l eF = (G_F /m_e c 2 ) 1/3 , this electroweak constant appears as
+a cube $a_w ≈ (\lambdabar e /l eF )^3$ , so:
+\lambdabar /l eF ≈ 2γ137a/π
 see below how this formulae simplifies again by using the Atiyah Constant.
 
 \section {The Muon and Tau fine tuning}
@@ -71,7 +78,7 @@ has a mathematical justification in term of circulating matrix. It predicted cor
 mass ratio at an epoch where its measurement was false to 3 sigmas. With the above μ value, it
 gives τ ≈ 3477.441701. This Koide relation, quite discarded by the communality, is another sign of
 the serious incompleteness of present Particle Physics standard model. This value correlate with the
-term 1+1/√a, central in quantum electrodynamics (to 10 -7 ):
+term 1+1/√a, central in quantum electrodynamics (to $10^-7$ ):
 1+1/√a ≈ τ 3 H/pD 2
 confirming the central role of the Moonshine Monster dimension [23] D = 196883.
 
@@ -80,14 +87,14 @@ confirming the central role of the Moonshine Monster dimension [23] D = 196883.
 The computer indicates, with n ≈ 1838.68366089(17) the neutron/electron mass ratio:
 W ≈ γa137 2 /3πd e
 Z ≈ ap 2 π 4 /137d e n
-With these values, the above relation R/√(ƛ p ƛ H ) ≈ (WZ) 4 corresponds to the above G value in the
+With these values, the above relation R/√(\lambdabar_p \lambdabar_H ) ≈ (WZ) 4 corresponds to the above G value in the
 ppb range.
 
 \section {The Direct Gravitational Constant mathematical fine-tuning}
 
-Computer analysis shows the following ppb precise extension for the deviation between 2 127 and
-a G ,
-(2 127 /a G ) 1/2 ≈ d e (H/p) 3 ≈ a w1/2 (a/ π ) 4 ( γ /4n) 3
+Computer analysis shows the following ppb precise extension for the deviation between $2^127$ and
+$a_G$ ,
+$$(2^127 /a_G ) 1/2 ≈ d_e (H/p) 3 ≈ a w1/2 (a/ π ) 4 ( γ /4n)^3$$
 leading to:
 (aa w1/2 /πd e ) 1/3 ≈ 4πn'/ γ a
 where n' = nH/p is the principal value of the neutron mass by respect to the electron effective mass
@@ -111,15 +118,14 @@ dimensions. So, this corresponds to a dimensional reduction, by eliminating 137,
 3D, which could be associated to Superstring theory, where the equations are coherent only if space
 has 9 dimensions, and if the 6 supplementary dimensions are fold on very small distances [25].
 Note that:
-m e c 2 f{γΓ} ≈ 125.175 GeV
+$$m_e c 2 f{γΓ} ≈ 125.175 GeV$$
 compatible with the Higgs Boson energy, Note that it corresponds to the dimension index k ≈ π: γΓ
-≈ 4π + 2The length ƛ e f{Γ} ≈ 5 10 5 light-years is characteristic of a galaxy group radius, and the length
-associated to the Milankovich climatic period. Now :
-Γ ≈ e π + 2
-meaning that the special value in the Topological Axis k = e π /4 ≈ 4/ln2 corresponds to about n = Γ .
+≈ 4π + 2. The length $\lambdabar_e f{Γ} ≈ 5\times 10^5$ light-years is characteristic of a galaxy group radius, and the length associated to the Milankovich climatic period. Now :
+$Γ ≈ e^π + 2$
+meaning that the special value in the Topological Axis $k = e π /4 ≈ 4/ln2$ corresponds to about n = Γ .
 The following double correlation is specially suggestive (2.2 and 0.3 ppm):
-a ≈ 4π 3 + π 2 +π ≈ ln(R/ƛ e ) + Γ + e π
+$$a ≈ 4π 3 + π 2 +π ≈ ln(R/\lambdabar_e ) + Γ + e π$$
 the first one is due to Reilly, and the second one confirms the R value. Moreover (0.013%, 0.046%):
-a – e π ≈ e π lna ≈ j = 8π 2 /ln2 ≈ θ mam /θ CMB
+$a – e π ≈ e π lna ≈ j = 8π 2 /ln2 ≈ θ mam /θ CMB$
 where j is the Sternheimer scale factor, central in Theoretical Biology [3], being, in particular the
 Temperature ratio Mammal/CMB.
